[package]
name = "Starknet_Dev_Setup"
version = "0.1.0"
edition = "2021"
authors = ["toastx"]
description = "StarkNet development setup made easier with one command for linux"
readme = "README.md"
repository = "https://github.com/toastx/starknet-dev-setup"
license = "MIT"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
eyre = "0.6.12"
paris = "1.5.15"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[[bin]]
name = "sdc"
path = "src/main.rs"
